# rift-main

./: .gitignore  CHEATSHEET.md  PHASE3.md  README.md  SESSION_LOG_2026-04-08.md  USER_GUIDE.md
android/rift-remote/: build.gradle  settings.gradle
android/rift-remote/app/: build.gradle  proguard-rules.pro
android/rift-remote/app/src/main/: AndroidManifest.xml
android/rift-remote/app/src/main/kotlin/com/rift/remote/: MainActivity.kt
android/rift-remote/app/src/main/kotlin/com/rift/remote/model/: DaemonStatus.kt
android/rift-remote/app/src/main/kotlin/com/rift/remote/network/: RiftApiClient.kt  RiftWebSocketClient.kt
android/rift-remote/app/src/main/kotlin/com/rift/remote/ui/: DashboardScreen.kt  LiveLogScreen.kt  QRScanScreen.kt  QueueScreen.kt  SubmitTaskScreen.kt
android/rift-remote/app/src/main/res/values/: strings.xml  themes.xml
rust/: Cargo.toml
rust/crates/rift-cli/: Cargo.toml
rust/crates/rift-cli/src/: main.rs
rust/crates/rift-core/: Cargo.toml
rust/crates/rift-core/src/: agent.rs  capability.rs  config.rs  context.rs  lib.rs  llm.rs  planner.rs  plugin.rs  session.rs  task.rs  verify.rs
rust/crates/rift-core/src/daemon/: mod.rs  queue.rs  server.rs
rust/crates/rift-core/src/self_correct/: mod.rs  orchestrator.rs
rust/crates/rift-core/src/server/: auth.rs  mod.rs  rest_api.rs  websocket.rs
rust/crates/rift-tools/: Cargo.toml
rust/crates/rift-tools/src/: builtin.rs  lib.rs  registry.rs
rust/crates/rift-tools/src/builtin/: deploy.rs  edit.rs  git.rs  web.rs
