[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/rift"
description = "AI coding assistant with plugin-based architecture"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"
schemars = "0.8"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
