[package]
name = "rift-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rift"
path = "src/main.rs"

[dependencies]
rift-core = { path = "../rift-core" }
rift-tools = { path = "../rift-tools" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde_json = { workspace = true }
