[package]
name = "rift-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
