[package]
name = "rift-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
igd = "0.12"
rand = "0.8"
