[package]
name = "rift-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rift-core = { path = "../rift-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
glob = "0.3"
regex = "1"
urlencoding = "2"
reqwest = { workspace = true }
